init before add docker

--- a/MessMeApi/appsettings.json
+++ b/MessMeApi/appsettings.json
@@ -1,8 +1,9 @@
 {
   "Jwt": {
-    "Key": "thisismyreallyreallyreallyreallyreallysecretkey",
-    "Issuer": "AuthDemo",
-    "Audience": "AuthDemoUsers"
+    "Key": "9B290858DC8F4B12B5747B6CCDF46A4B",
+    "Issuer": "MessMeAuth",
+    "Audience": "MessMeUsers"
+
   },
   "Logging": {
     "LogLevel": {
@@ -11,9 +12,10 @@
     }
   },
   //"AllowedHosts": "*",
-  "AllowedOrigins": "http://localhost:4200", // ✅ Set allowed frontend URL
-
-
+  "AllowedOrigins": [
+    "http://localhost:4200", // ✅ Set allowed frontend URL
+    "http://localhost:4000" // ✅ Set allowed frontend URL
+  ] ,
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=Dev;Trusted_Connection=True;TrustServerCertificate=True;"
   }
